# season2

./: .gitignore  .yarnrc.yml  CONTRIBUTING.md  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
.obsidian/: workspace.json
.obsidian/plugins/obsidian-git/: data.json
ai/gpt-sample/: pyproject.toml
ai/gpt-sample/src/: __init__.py  langchian.py  multiagent.py
ai/gpt-sample/src/utils/: date.py
apps/IVON/: package.json
apps/IVON/ivon-mobile/: package-lock.json
apps/IVON/ivon-project/: package-lock.json  package.json
apps/IVON/purba/: build.gradle  openai_test.py
apps/genius/: package.json  tsconfig.json  vite.config.ts
apps/genius/capstone-project/: .eslintrc.json  .prettierrc  package.json
apps/genius/src/: App.tsx  atoms.ts
apps/ivon-web/: package.json  tsconfig.json
apps/pubra-app/: nativescript.config.ts  package.json
apps/purba-web/: README.md  package-lock.json  package.json
apps/purba-web/src/: App.vue
configs/eslint-config-custom/: package.json
configs/eslint-config-react/: index.js  package.json
configs/eslint-config-vue/: index.js  package.json
configs/prettier-config-custom/: prettier.config.js
configs/tsconfig-custom/: package.json  tsconfig.react.json  tsconfig.vue.json
configs/vite-config-custom/: index.d.ts  index.js  package.json
docs/: README.md
docs/meetup/: README.md
docs/meetup/0cheory/: 2023-11-07.md  2023-11-08.md  README.md
docs/meetup/CALIENTACABEZAS/: 2023-10-18.md  2023-10-24.md  2023-10-30.md  2023-11-15.md  2023-12-21.md  2024-01-11.md  2024-02-08.md  README.md
docs/meetup/__official__/: 2023-12-15.md  README.md
docs/meetup/dontcallme/: 2023-11-02.md  2023-11-16.md  2023-12-21.md  2024-01-18.md  README.md
docs/meetup/missu/: 2023-11-07.md  2023-11-10.md  README.md
docs/meetup/pictures-as-want/: 2023-11-08.md
docs/meetup/team2/: 2024-01-18.md
docs/meetup/totobori/: 2023_11_07.md  2023_11_08.md  README.md
docs/meetup/youkids/: 2023-10-18.md  2023-10-27.md  2023-11-15.md  2023-12-27.md  README.md
docs/meetup/손이필요해/: 2023-10-19.md  2023-10-26.md  2023-11-16.md  README.md
docs/meetup/챗봇/: 2023-11-08.md  2023-11-10.md  README.md
docs/meetup/천재인가봐/: 2023-10-18.md  2023-10-27. md  2023-11-15.md  2023-12-27.md  2024-05-07.md  README.md
docs/report/: README.md
docs/report/CALIENTACABEZAS/: README.md
docs/report/__official__/: README.md  schedule_20231010.xlsx
docs/report/dontcallme/: README.md
docs/report/team2/: 2024-01-24_1차_기획문서.md  2024-02-08_2차_기획문서.md
docs/report/totobori/: 2023-11-13_계약서_검토서비스_화면리스트.xlsx  2023-11-21_계약검토 서비스_화면설계.version4.pptx
docs/report/youkids/: 2023-12-30_옥메와까_화면리스트.xlsx  2023-12-30_옥메와까_화면리스트_수정.xlsx  README.md
docs/report/손이필요해/: 10.py  README.md  artifacts.xml
docs/report/영처리/: 영처리_웹_화면설계서_20231120_ver04(기능구체화).pptx  영처리_웹_화면설계서_20231120_ver05(기능단순화).pptx  화면리스트업_영처리.xlsx
docs/report/천재인가봐/: 2023-11-10_천재인가봐_기능_리스트업_및_피그마_xlsx.xlsx  (+1 more)
servers/djangoProject/: Dockerfile  podman-compose.yml  pyproject.toml  requirements.txt
servers/genius/: Dockerfile  README.md  manage.py  podman-compose.yml  pyproject.toml
servers/genius/genius/: asgi.py  settings.py  urls.py  wsgi.py
servers/genius/geniusback/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
servers/genius/geniusback/migrations/: 0001_initial.py
servers/purba/: build.gradle
services/purba/: build.gradle.rej
templates/python-project/: README.md  pyproject.toml
templates/spring-project/: build.gradle  settings.gradle
templates/vue-project/: .eslintignore  .eslintrc.cjs  README.md  package.json  vite.config.ts
(+140 files in other folders)
