[tool.poetry]
name = "season2"
version = "0.0.0"
description = ""
authors = ["alstjr7375 <alstjr7375@daum.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
poetry-multiproject-plugin = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
